hydro2/hydro2-network-wire-derive/tests/trybuild/fail_hybrid_bad_syntax.stderr
error: Could not parse `BadOp(` as a Path.
 --> tests/trybuild/fail_hybrid_bad_syntax.rs:9:8
  |
9 |     op="BadOp("
  |        ^^^^^^^^
